Fix contrast

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -152,7 +152,7 @@
 }
 
 .homepage-button:hover {
-  color: white;
+  color: black;
   background-color: rgb(94, 197, 199);
 }
 
